istio/security/keycloak-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - "*"
  gateways:
  - default-gateway
  http:
  - match:
      - uri:
          prefix: /auth
    route:
    - destination:
        host: keycloak
        port:
          number: 8080
  - route:
    - destination:
        host: httpbin
        port:
          number: 8000
